--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.2"
+tokio = { version = "1", features = ["full"] }
+mongodb = "2.3.0"
+exitfailure = "0.5.1"
