--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 rocket = "0.5.0-rc.2"
 tokio = { version = "1", features = ["full"] }
 mongodb = "2.3.0"
-exitfailure = "0.5.1"
+bson = { version = "2", features = ["chrono-0_4"] }
+chrono = "0.4"
+serde = "1"
