--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.2"
+dotenv = "0.15.0"
 tokio = { version = "1", features = ["full"] }
 mongodb = "2.3.0"
 bson = { version = "2", features = ["chrono-0_4"] }
