--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.2"
+rocket = {version = "0.5.0-rc.2", features = ["json"]}
 dotenv = "0.15.0"
 tokio = { version = "1.3", features = ["full"]}
 mongodb = "2.3.0"
@@ -14,3 +14,4 @@ bson = { version = "2", features = ["chrono-0_4"] }
 exitfailure = "0.5.1"
 chrono = "0.4"
 serde = "1"
+serde_json = "1.0"
