--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 rocket = {version = "0.5.0-rc.2", features = ["json"]}
 dotenv = "0.15.0"
 tokio = { version = "1.3", features = ["full"]}
-mongodb ={ version = "2.3.0", features = ["sync"]}
+mongodb ={ version = "2.3.0"}
 bson = { version = "2", features = ["chrono-0_4"] }
 chrono = "0.4"
 serde = "1"
