--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ bson = { version = "2", features = ["chrono-0_4"] }
 chrono = "0.4"
 serde = "1"
 serde_json = "1.0"
-reqwest = "0.11.14"
+reqwest =  { version = "0.11.14", features = ["json"] } 
 rand = "0.8.5"
