--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,21 @@
-# [package]
-# name = "rust"
-# version = "0.1.0"
-# edition = "2021"
-# [dependencies]
+[package]
+name = "rust"
+version = "0.1.0"
+edition = "2021"
 
-[workspace]
-members = [
-  "backend",
-  "frontend",
-]
+
+[dependencies]
+rocket = {version = "0.5.0-rc.2", features = ["json"]}
+dotenv = "0.15.0"
+tokio = { version = "1.28", features = ["full"]}
+bson = { version = "2", features = ["chrono-0_4"] }
+chrono = "0.4"
+serde = "1"
+serde_json = "1.0"
+reqwest =  { version = "0.11.14", features = ["json"] } 
+rand = "0.8.5"
+
+[dependencies.mongodb]
+version = "2.3.0"
+default-features = false
+features = ["tokio-sync"]
